# Malinovskiy-student-template

./: README.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb  S02-hw-dataset.csv
homeworks/HW03/: README.md
homeworks/HW03/eda-cli/: pyproject.toml
homeworks/HW03/eda-cli/src/eda_cli/: core.py  viz.py
homeworks/HW03/eda-cli/tests/: test_core.py
homeworks/HW04/eda-cli/: README.md  pyproject.toml
homeworks/HW04/eda-cli/data/: example.csv
homeworks/HW04/eda-cli/scripts/: client.py
homeworks/HW04/eda-cli/src/eda_cli/: __init__.py  api.py  cli.py
homeworks/HW04/eda-cli/tests/: test_core.py
homeworks/HW05/: HW05.ipynb  README.md  requirements.txt
homeworks/HW05/artifacts/: best_logistic_model.pkl  metrics.json
