[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "eda-cli"
version = "0.1.0"
description = "CLI tool for exploratory data analysis"
authors = [
    {name = "AI Engineering Student", email = "student@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "seaborn>=0.12.0",
]

[project.scripts]
eda-cli = "eda_cli.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]